--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,7 +10,7 @@
 <body>
   <div>
       <h1>Welcome to Awesome application</h1>
-      <h1>Welcome to Awesome application - Abdul</h1>
+      <h1>Welcome to Awesome application - Abdul, Iskander  </h1>
     {{{body}}}
 </div>
 <div>
